--- a/src/app/adminfolder/jobapplications/jobapplications.component.html
+++ b/src/app/adminfolder/jobapplications/jobapplications.component.html
@@ -1,4 +1,4 @@
-<div style="font-size: 0.9rem;margin: 2rem;">
+<div class="top" style="font-size: 0.9rem;margin: 2rem;">
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal" style="float: right;"
         (click)="displaymodal()">Create a new job</button>
     <br /><br />
