--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,12 +6,11 @@
             <div class="row" style="margin: 0;padding:0">
                 <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="services" >Services</div>
                 <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="maps" >Maps</div>
-                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="localanalysis" >Local Analysis</div>
-                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="infrastructure" >Infrastructure and 3D Modules</div>
+                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="infrastructure" >3D Models</div>
+                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="workwithus">Employment</div><br>
+                <div class="col"  style="cursor:pointer;padding:0;margin: 0;"  routerLinkActive="active" routerLink="donations">Donations</div><br>
+                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="feedback">Feedbacks & Reports</div><br>
                 <div class="col">
-                <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="donations">Donations</div><br>
-                <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="workwithus">Work With Us</div><br>
-                <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="feedback">Feedback</div><br>
                 <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="contactus">Contact Us</div><br>
                 <i class='bx bxl-linkedin-square bx-tada bx-rotate-90' style="font-size:2rem"   ></i>
                 <i class='bx bxl-facebook-circle bx-tada bx-rotate-90' style="font-size:2rem" ></i>
@@ -21,11 +20,11 @@
         </div>
         <div *ngIf="admin==1">
             <div class="row" style="margin: 0;padding:0">
-                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="donations" >Donations</div>
-                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="feedbacks" >Feedback</div>
-                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="contracts" >Contracts</div>
+                <div class="col-2"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="adminmaps" >Maps</div>
                 <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="jobapplications" >Job Applications</div>
-                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="contactus" >Contact Us</div>
+                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="admindonations" >Donations</div>
+                <!-- <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="contracts" >Contracts</div> -->
+                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="feedbacks" >Feedback & Reports</div>
                 
                 <div class="col">
                 Social Media<br/><br/>
