--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
         <img src="assets/logo12.png" style="height:12vh ;width: 6vw;margin-right: 1rem;" alt="hello" />
         <span>
             <span class="logo_name">HAPPYRESIDENCE4U</span><br />
-            <strong style="font-size: 0.9rem;color:rgba(23, 164, 209, 1);font-family: poppins;">We build your visions ,
+            <strong style="font-size: 0.9rem;color:rgba(23, 164, 209, 1);font-family: poppins;">We build your vision ,
                 with perfections .</strong>
         </span>
         <span style="margin-left: 50%;">
