--- a/src/app/adminfolder/adminmaps/adminmaps.component.css
+++ b/src/app/adminfolder/adminmaps/adminmaps.component.css
@@ -23,3 +23,42 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #01143b;
 }
+
+.imag1 {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.view {
+    position: fixed;
+    left: 72%;
+    bottom: 1%;
+    right: 1%;
+    background: rgb(5, 166, 219);
+    padding: 15px;
+    box-shadow: 0px 0px 10px 2px rgb(214, 210, 210);
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    animation: fade 3s;
+    color: white;
+    width: auto;
+    cursor: context-menu;
+    /* z-index: 10; */
+}
+
+@keyframes fade {
+    0% {
+        opacity: 0;
+
+    }
+
+    100% {
+        opacity: 1;
+
+    }
+}
