--- a/src/app/appservices/appservices.component.html
+++ b/src/app/appservices/appservices.component.html
@@ -1,6 +1,6 @@
 <div id="top" class="m-2" style="font-family: poppins;">
     <div class="row" style="margin: 0;padding:0">
-        <div class="col m-5 shadow " style="background-color: whiteSmoke;padding: 2rem;">
+        <div class="col m-5 shadow " style="background-color: whiteSmoke;padding: 2rem;cursor: pointer" routerLink="/sih/maps">
             <h4><b>
                 IDENTIFICATION OF SLUMS</b></h4>
 
@@ -88,7 +88,7 @@
 
 
 
-    <div class="m-5">
+    <div class="m-5" style="cursor: pointer" routerLink="/sih/infrastructure">
 
         <h4><b>
             SAMPLE 2D AND 3D DIAGRAMS:
@@ -99,10 +99,10 @@
             which or
             preferably economic and also which can be maintained at low cost with maximum safety.
         </p><br />
-        <h4><b>
+        <h4 style="cursor: pointer" routerLink="/sih/workwithus"><b>
             EMPLOYMENT OPPORTUNITIES
         </b></h4>
-        <span class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
+        <span class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;cursor: pointer" routerLink="/sih/workwithus">
             <h5>
                 Work with us
             </h5>
@@ -114,7 +114,7 @@
                 be posted on this website.
             </p>
         </span><br />
-        <span class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
+        <span class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;cursor: pointer" routerLink="/sih/workwithus">
             <h5>
                 Work for us
             </h5>
@@ -126,11 +126,11 @@
                 which the job seekers can avail the position or role by submitting the necessary requirements.
             </p>
         </span><br /><br />
-        <h4><b>
+        <h4 style="cursor: pointer" routerLink="/sih/donations"><b>
             DONATIONS:
         </b></h4>
 
-        <span class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
+        <span class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;cursor: pointer" routerLink="/sih/donations">
             <ul>
                 <li>
                     Donators can send money via online payment.
