--- a/src/app/infrastructuremodels/infrastructuremodels.component.html
+++ b/src/app/infrastructuremodels/infrastructuremodels.component.html
@@ -1,5 +1,26 @@
 <!-- <iframe src="../assests/trails.html"  width="1600" height="460" style="border:0;">
 </iframe> -->
+<div style="margin: 2rem;"><br>
+    <h3>
+        CONSTRUCTION TECHNIQUES:
+    </h3>
+    
+    ⦁ Usage of Capsule houses(*)<br>
+    ⦁ Usage of Recycled Concrete(*)<br>
+    ⦁ Restricting the building height up to G+3(ground floor+ three floors) because it reduces the cost of
+    construction(*)
+    <br>⦁ Compromising in the quality(not suggestible for large scale)
+    <br>⦁ Using of modern construction techniques like containment reinforcement system
+    <br>⦁ Constructing of slope / Inverted V shaped slabs to the house .
+    <br>⦁ Using tiled roofs .<br><br>
+    <h3>
+        TECHNIQUES FOR SELF-SUSTAINABILITY:
+    </h3>
+    ⦁ Basic Kitchen garden
+    <br>⦁ Water harvesting systems
+    <br>⦁ Using of Bio-Gas
+    <br>⦁ Waste management
+</div>
 <div class="row" style="margin: 2rem;">
     <div class="col" style="text-align: center;">
         <h4><b>House Blue-Print</b></h4>
@@ -18,40 +39,41 @@
     </div>
 </div>
 <div style="margin: 2rem;">
-    <h3>Home-1</h3><br>
+    <h3>Home-2</h3><br>
     <div style="overflow: hidden;width: 95vw;height: 90vh;">
         <iframe src="https://kovikarthik.github.io/sihhome2/" style="border:0;height:90vh;width: 100vw;left: 10%;">
         </iframe>
     </div>
 </div>
 <div style="margin: 2rem;">
-    <h3>Home-1</h3><br>
+    <h3>Home-3</h3><br>
     <div style="overflow: hidden;width: 95vw;height: 90vh;">
         <iframe src="https://kovikarthik.github.io/sihhome3/" style="border:0;height:90vh;width: 100vw;left: 10%;">
         </iframe>
     </div>
 </div>
 <div style="margin: 2rem;">
-    <h3>Home-1</h3><br>
+    <h3>Home-4</h3><br>
     <div style="overflow: hidden;width: 95vw;height: 90vh;">
         <iframe src="https://kovikarthik.github.io/sihhome4/" style="border:0;height:90vh;width: 100vw;left: 10%;">
         </iframe>
     </div>
 </div>
 <div style="margin: 2rem;">
-    <h3>Home-1</h3><br>
+    <h3>Home-5</h3><br>
     <div style="overflow: hidden;width: 95vw;height: 90vh;">
         <iframe src="https://kovikarthik.github.io/sihhome5/" style="border:0;height:90vh;width: 100vw;left: 10%;">
         </iframe>
     </div>
 </div>
 <div style="margin: 2rem;">
-    <h3>Home-1</h3><br>
+    <h3>Home-6</h3><br>
     <div style="overflow: hidden;width: 95vw;height: 90vh;">
         <iframe src="https://kovikarthik.github.io/sihhome6/" style="border:0;height:90vh;width: 100vw;left: 10%;">
         </iframe>
     </div>
 </div>
+
 
 
 
