--- a/src/app/infrastructuremodels/infrastructuremodels.component.html
+++ b/src/app/infrastructuremodels/infrastructuremodels.component.html
@@ -31,42 +31,44 @@
         <img src="../../assets/projectplan.png">
     </div>
 </div>
-<div style="margin: 2rem;">
-    <h3>Home-1</h3><br>
-    <div style="overflow: hidden;width: 95vw;height: 90vh;">
-        <iframe src="https://kovikarthik.github.io/sayduckaz21/" style="border:0;height:90vh;width: 100vw;left: 10%;">
-        </iframe>
+<div class="row">
+    <div class="col" style="text-align: center;margin: 2rem;">
+        <h3>Home-1</h3><br>
+        <div style="overflow: hidden;width: 95vw;height: 90vh;">
+            <iframe src="https://kovikarthik.github.io/sayduckaz21/" style="border:0;height:90vh;width: 100vw;left: 10%;">
+            </iframe>
+        </div>
+    </div>
+    <div class="col" style="text-align: center;margin: 2rem;">
+        <h3>Home-2</h3><br>
+        <div style="overflow: hidden;width: 95vw;height: 90vh;">
+            <iframe src="https://kovikarthik.github.io/sihhome2/" style="border:0;height:90vh;width: 100vw;left: 10%;">
+            </iframe>
+        </div>
     </div>
 </div>
-<div style="margin: 2rem;">
-    <h3>Home-2</h3><br>
-    <div style="overflow: hidden;width: 95vw;height: 90vh;">
-        <iframe src="https://kovikarthik.github.io/sihhome2/" style="border:0;height:90vh;width: 100vw;left: 10%;">
-        </iframe>
-    </div>
-</div>
-<div style="margin: 2rem;">
+<div style="margin: 2rem;text-align: center;">
     <h3>Home-3</h3><br>
     <div style="overflow: hidden;width: 95vw;height: 90vh;">
         <iframe src="https://kovikarthik.github.io/sihhome3/" style="border:0;height:90vh;width: 100vw;left: 10%;">
         </iframe>
     </div>
 </div>
-<div style="margin: 2rem;">
+<div style="margin: 2rem;text-align: center;">
     <h3>Home-4</h3><br>
     <div style="overflow: hidden;width: 95vw;height: 90vh;">
         <iframe src="https://kovikarthik.github.io/sihhome4/" style="border:0;height:90vh;width: 100vw;left: 10%;">
         </iframe>
     </div>
 </div>
-<div style="margin: 2rem;">
+<div style="margin: 2rem;text-align: center;">
     <h3>Home-5</h3><br>
     <div style="overflow: hidden;width: 95vw;height: 90vh;">
         <iframe src="https://kovikarthik.github.io/sihhome5/" style="border:0;height:90vh;width: 100vw;left: 10%;">
         </iframe>
     </div>
 </div>
-<div style="margin: 2rem;">
+<div style="margin: 2rem;text-align: center;">
     <h3>Home-6</h3><br>
     <div style="overflow: hidden;width: 95vw;height: 90vh;">
         <iframe src="https://kovikarthik.github.io/sihhome6/" style="border:0;height:90vh;width: 100vw;left: 10%;">
