--- a/src/app/adminfolder/adminmaps/adminmaps.component.html
+++ b/src/app/adminfolder/adminmaps/adminmaps.component.html
@@ -98,11 +98,11 @@
                                 fields valid
                                 .</strong><br>
                         </div>
-                        <!-- <div style="text-align: center;">
+                        <div style="text-align: center;">
                             <img class="imag1" [src]="tempimg" (click)="img.click()" style="cursor: pointer;" />
                             <input style="display: none;" accept="image/png, image/jpeg"
                                 (change)="handleFileSelect($event)" type="file" #img><br>
-                        </div> -->
+                        </div>
                         <label>Slumid</label><br />
                         <div [formGroup]="mapData">
                             <input formControlName="slumid" class="form-control" /><br />
@@ -113,15 +113,19 @@
                         <label>Occupation</label><br />
                         <input (click)="userStatus=''" formControlName="occupation" class="form-control"
                             placeholder="Enter Full Name" /><br />
+                        <label>Occupation</label><br />
+                        <input (click)="userStatus=''" formControlName="skills" class="form-control"
+                            placeholder="Enter skills" /><br />
                         <label>Previous address</label><br />
                         <input (click)="userStatus=''" formControlName="prevaddress" class="form-control"
-                            placeholder="Enter Full Name" /><br />
+                            placeholder="Enter Previous address" /><br />
                         <label>Reason of migration</label><br />
                         <input (click)="userStatus=''" formControlName="Reasonofmigration" class="form-control"
-                            placeholder="Enter Person Skill set" /><br />
-                        <label>Skills</label><br />
+                            placeholder="Enter Reason fo migartion" /><br />
+                        <!-- <label>Skills</label><br />
                         <input (click)="userStatus=''" formControlName="Reasonofmigration" class="form-control"
-                            placeholder="Enter Person Skill set" /><br />
+                            placeholder="Enter Person Skill set" /><br /> -->
+
                         <button style="float: right;" class="btn btn-danger" type="button"
                             (click)="closePeople()">Close</button>
                         <button style="float: right;margin-right: 1rem;" type="submit"
