--- a/src/app/adminfolder/adminmaps/adminmaps.component.html
+++ b/src/app/adminfolder/adminmaps/adminmaps.component.html
@@ -98,11 +98,11 @@
                                 fields valid
                                 .</strong><br>
                         </div>
-                        <div style="text-align: center;">
+                        <!-- <div style="text-align: center;">
                             <img class="imag1" [src]="tempimg" (click)="img.click()" style="cursor: pointer;" />
                             <input style="display: none;" accept="image/png, image/jpeg"
                                 (change)="handleFileSelect($event)" type="file" #img><br>
-                        </div>
+                        </div> -->
                         <label>Slumid</label><br />
                         <div [formGroup]="mapData">
                             <input formControlName="slumid" class="form-control" /><br />
