--- a/src/app/adminfolder/adminmaps/adminmaps.component.html
+++ b/src/app/adminfolder/adminmaps/adminmaps.component.html
@@ -143,16 +143,16 @@
                             placeholder="Enter Person Id" /><br />
                         <label>Occupation</label><br />
                         <input (click)="userStatus=''" formControlName="occupation" class="form-control"
-                            placeholder="Enter Full Name" /><br />
+                            placeholder="Enter Occupation" /><br />
                         <label>Skills</label><br />
                         <input (click)="userStatus=''" formControlName="skills" class="form-control"
-                            placeholder="Enter skills" /><br />
+                            placeholder="Enter Skills" /><br />
                         <label>Previous address</label><br />
                         <input (click)="userStatus=''" formControlName="prevaddress" class="form-control"
-                            placeholder="Enter Previous address" /><br />
+                            placeholder="Enter Previous Address" /><br />
                         <label>Reason of migration</label><br />
                         <input (click)="userStatus=''" formControlName="Reasonofmigration" class="form-control"
-                            placeholder="Enter Reason fo migartion" /><br />
+                            placeholder="Enter Reason Of Migartion" /><br />
                         <!-- <label>Skills</label><br />
                         <input (click)="userStatus=''" formControlName="Reasonofmigration" class="form-control"
                             placeholder="Enter Person Skill set" /><br /> -->
