--- a/src/app/adminfolder/adminmaps/adminmaps.component.html
+++ b/src/app/adminfolder/adminmaps/adminmaps.component.html
@@ -76,7 +76,7 @@
             ;align-items: center;justify-content: center;">
                 <h4 class="modal-title"><b><span *ngIf="!addPeople">
                             Maps
-                        </span> <span *ngIf="addPeople" style="font-size: 1.2rem;">Add people in
+                        </span> <span *ngIf="addPeople" style="font-size: 1.2rem;">Add People In
 
                             {{mapData.value.name}} {{mapData.value.slumid}}</span></b></h4>
             </div>
@@ -147,9 +147,19 @@
                         <label>Skills</label><br />
                         <input (click)="userStatus=''" formControlName="skills" class="form-control"
                             placeholder="Enter Skills" /><br />
-                        <label>Previous address</label><br />
-                        <input (click)="userStatus=''" formControlName="prevaddress" class="form-control"
-                            placeholder="Enter Previous Address" /><br />
+                            <div formGroupName="prevaddress">
+                                <label>Previous address</label><br />
+                                <input (click)="userStatus=''" formControlName="dno" class="form-control"
+                                    placeholder="Enter Door No" /><br />
+                                <input (click)="userStatus=''" formControlName="streetno" class="form-control"
+                                    placeholder="Enter Street No" /><br />
+                                <input (click)="userStatus=''" formControlName="townorcity" class="form-control"
+                                    placeholder="Enter Town or City" /><br />
+                                <input (click)="userStatus=''" formControlName="state" class="form-control"
+                                    placeholder="Enter State" /><br />
+                                <input (click)="userStatus=''" formControlName="pincode" class="form-control"
+                                    placeholder="Enter Pincode" /><br />
+                            </div>
                         <label>Reason of migration</label><br />
                         <input (click)="userStatus=''" formControlName="Reasonofmigration" class="form-control"
                             placeholder="Enter Reason Of Migartion" /><br />
